bdr.BDR2.scala.error
Compilation error:
BDR2:18: error: '=>' expected but '}' found.
}
^